Fix errors reported by lint